Progress on: long: web site update

--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,8 @@
  <copy todir="doc">
    <fileset file="../org.eclipse.mylar.doc/doc/faq.html"/>
    <fileset file="../org.eclipse.mylar.doc/doc/new.html"/>
+   <fileset file="../org.eclipse.mylar.doc/doc/new-0.3.html"/>
+   <fileset file="../org.eclipse.mylar.doc/doc/contributing.html"/>
    <!--<fileset dir="../org.eclipse.mylar.doc/doc/images"/>-->
  </copy>
 </target>
