--- a/build.xml
+++ b/build.xml
@@ -8,9 +8,12 @@
 			<fileset file="../org.eclipse.mylar.doc/doc/new-0.3.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/contributing.html" />
 		</copy>
+		<copy todir="doc/dev">
+			<fileset file="../org.eclipse.mylar.doc/doc/dev/plan.html" />
+		</copy>
 		<copy todir="doc/images">
-			<fileset dir="../org.eclipse.mylar.doc/doc/images"/>
-		</copy> 
+			<fileset dir="../org.eclipse.mylar.doc/doc/images" />
+		</copy>
 	</target>
 
 	<target name="copy-release" description="Doc Release Update">
@@ -18,5 +21,5 @@
 			<fileset file="../org.eclipse.mylar.doc/doc/new.html" />
 		</copy>
 	</target>
-	
+
 </project>
