--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 			<fileset file="../org.eclipse.mylar.doc/doc/faq.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/new-0.4.0.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/contributing.html" />
+			<fileset file="../org.eclipse.mylar.doc/doc/integrating.html" />
 		</copy>
 		<copy todir="doc/dev">
 			<fileset file="../org.eclipse.mylar.doc/doc/dev/plan.html" />
