--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,7 @@
 		<copy todir="doc">
 			<fileset file="../org.eclipse.mylar.doc/doc/faq.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/new-0.4.0.html" />
+			<fileset file="../org.eclipse.mylar.doc/doc/new.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/contributing.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/integrating.html" />
 		</copy>
