long: web site update

--- a/build.xml
+++ b/build.xml
@@ -4,11 +4,13 @@
 
 	<target name="copy-web" description="Doc Web Update">
 		<copy todir="doc">
+			<fileset file="../org.eclipse.mylar.doc/doc/*.html" />
+			<!--
 			<fileset file="../org.eclipse.mylar.doc/doc/faq.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/new-0.4.0.html" />
-			<fileset file="../org.eclipse.mylar.doc/doc/new.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/contributing.html" />
 			<fileset file="../org.eclipse.mylar.doc/doc/integrating.html" />
+			-->
 		</copy>
 		<copy todir="doc/dev">
 			<fileset file="../org.eclipse.mylar.doc/doc/dev/plan.html" />
